fix(list): missing pseudo-class leads to invisible list item

--- a/src/definitions/elements/list.less
+++ b/src/definitions/elements/list.less
@@ -63,7 +63,7 @@ ol.ui.list li,
 
 ul.ui.list > li:first-child:after,
 ol.ui.list > li:first-child:after,
-.ui.list > .list > .item,
+.ui.list > .list > .item:after,
 .ui.list > .item:after {
   content: '';
   display: block;
